Kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
  namespace: antcolony
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
        - name: react-app
          image: chorba/antcolony:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: docker-credentials
