Kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-app-service
  namespace: react-app
spec:
  selector:
    app: react-app
  ports:
    - protocol: TCP
      port: 4100
      targetPort: 4100
  type: LoadBalancer
