Kubernetes/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: antcolony
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front-app
  template:
    metadata:
      labels:
        app: front-app
    spec:
      containers:
        - name: front-app
          image: chorba/antcolony:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: docker-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: antcolony
spec:
  #type: LoadBalancer
  selector:
    app: front-app
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: antcolony
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: frontend-app.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
